--- a/testsite/news/templates/news/index.html
+++ b/testsite/news/templates/news/index.html
@@ -6,12 +6,13 @@
     <title>{{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Меню</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,16 +32,35 @@
 <div class="container mt-3">
     <h1>{{ title }}</h1>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-4">
+            <div class="list-group">
+                {% for item in categories %}
+                <a href="/category/{{ item.pk }}" class="list-group-item list-group-item-action">
+                    {{ item.title }}
+                </a>
+                {% endfor %}
+
+            </div>
+        </div>
+        <div class="col-md-8">
             {% for item in news %}
             <div class="card mb-3">
                 <div class="card-header">
                     Категория: {{ item.category }}
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">{{ item.title }}</h5>
-                    <p class="card-text">{{ item.content }}</p>
-                    <a href="#" class="btn btn-primary">Read more...</a>
+                    <div class="media">
+                        {% if item.photo %}
+                        <img src="{{ item.photo.url }}" alt="" width="350" class="mr-3">
+                        {% else %}
+                        <img src="https://picsum.photos/id/1060/350/300/?blur=2" class="mr-3">
+                        {% endif %}
+                        <div class="media-body">
+                            <h5 class="card-title">{{ item.title }}</h5>
+                            <p class="card-text">{{ item.content|safe|linebreaks|truncatewords:50 }}</p>
+                            <a href="#" class="btn btn-primary">Read more...</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-footer text-muted">
                     {{ item.created_at|date:"Y-m-d H:i" }}
