--- a/testsite/news/templates/news/category.html
+++ b/testsite/news/templates/news/category.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }}</title>
+    <title>{{ category.title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
@@ -19,7 +19,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Главная</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Главная</a>
+                </li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Добавить новость</a></li>
             </ul>
             <form class="d-flex" role="search">
@@ -30,7 +31,6 @@
     </div>
 </nav>
 <div class="container mt-3">
-    <h1>{{ title }}</h1>
     <div class="row">
         <div class="col-md-3">
             <div class="list-group">
@@ -51,9 +51,9 @@
                 <div class="card-body">
                     <div class="media">
                         {% if item.photo %}
-                        <img src="{{ item.photo.url }}" alt="" width="350" class="mr-3">
+                           <img src="{{ item.photo.url }}" alt="" width="350" class="mr-3">
                         {% else %}
-                        <img src="https://picsum.photos/id/1060/350/300/?blur=2" class="mr-3">
+                          <img src="https://picsum.photos/id/1060/350/300/?blur=2" class="mr-3">
                         {% endif %}
                         <div class="media-body">
                             <h5 class="card-title">{{ item.title }}</h5>
