--- a/testsite/news/templates/news/list_categories.html
+++ b/testsite/news/templates/news/list_categories.html
@@ -1,6 +1,6 @@
 <div class="list-group">
     {% for item in categories %}
-    <a href="{% url 'category' item.pk %}" class="list-group-item list-group-item-action">
+    <a href="{{ item.get_absolute_url }}" class="list-group-item list-group-item-action">
         {{ item.title }}
     </a>
     {% endfor %}
