--- a/testsite/news/templates/news/index.html
+++ b/testsite/news/templates/news/index.html
@@ -17,7 +17,7 @@
             {% if item.photo %}
             <img src="{{ item.photo.url }}" alt="" width="350" class="mr-3">
             {% else %}
-            <img src="https://picsum.photos/id/1060/350/300/?blur=2" class="mr-3">
+            <img src="\media\photos\2022\10\05\7._Бабочка.jpg" alt="" width="350" class="mr-3">
             {% endif %}
             <div class="media-body">
                 <h5 class="card-title">{{ item.title }}</h5>
