--- a/testsite/templates/inc/_nav.html
+++ b/testsite/templates/inc/_nav.html
@@ -10,6 +10,7 @@
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Главная</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'add_news' %}">
                     Добавить новость</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Отзывы</a></li>
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
