--- a/testsite/news/templates/news/view_news.html
+++ b/testsite/news/templates/news/view_news.html
@@ -3,7 +3,7 @@
 {{ news_item.title }}
 {% endblock %}
 {% block sidebar %}
-    {% include 'inc/_sidebar.html' %}
+{% include 'inc/_sidebar.html' %}
 {% endblock %}
 
 {% block content %}
@@ -12,17 +12,15 @@
         Категория: <a href="{{ news_item.category.get_absolute_url }}">{{news_item.category }}</a>
     </div>
     <div class="card-body">
-        <div class="media">
-            {% if item.photo %}
-            <img src="{{ news_item.photo.url }}" alt="" width="350" class="mr-3">
-            {% else %}
-            <img src="\media\photos\2022\10\05\7._Бабочка.jpg" alt="" width="350" class="mr-3">
-            {% endif %}
-            <div class="media-body">
-                <h5 class="card-title">{{ news_item.title }}</h5>
-                <p class="card-text">{{ news_item.content|safe|linebreaks }}</p>
-            </div>
-        </div>
+        {% if item.photo %}
+        <img src="{{ news_item.photo.url }}" alt="" width="350" class="float-left mr-3">
+        {% else %}
+        <img src="\media\photos\2022\10\05\7._Бабочка.jpg" alt="" width="350" class="float-left">
+        {% endif %}
+
+            <h5 class="card-title">{{ news_item.title }}</h5>
+            <p class="card-text">{{ news_item.content|safe|linebreaks }}</p>
+
     </div>
     <div class="card-footer text-muted">
         {{ news_item.created_at|date:"Y-m-d H:i" }}
